--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -6,10 +6,19 @@ Authors@R: person("Diogo", "Melo", , "diogro@gmail.com", c("aut", "cre"))
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
-ByteCompile: true
-Depends: R (>= 3.4.0), Rcpp (>= 0.12.16), methods
-Imports: rstan (>= 2.17.3), rstantools (>= 1.5.0)
-LinkingTo: StanHeaders (>= 2.17.2), rstan (>= 2.17.3), BH (>= 1.66.0-1), Rcpp (>= 0.12.16), RcppEigen (>= 0.3.3.4.0)
+Biarch: true
+Depends: 
+    R (>= 3.4.0)
+Imports: 
+    Rcpp (>= 0.12.0),
+    methods,
+    rstan (>= 2.18.1),
+    rstantools (>= 2.0.0)
+LinkingTo: 
+    BH (>= 1.66.0),
+    Rcpp (>= 0.12.0),
+    RcppEigen (>= 0.3.3.3.0),
+    StanHeaders (>= 2.18.0),
+    rstan (>= 2.18.1)
 SystemRequirements: GNU make
-NeedsCompilation: yes
 RoxygenNote: 7.0.2
