--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -1,14 +1,14 @@
-Package: stanAnimal
-Version: 0.0.1
-Title: Stan Animal model
-Description: Fit linear animal model for one or more traits.
+Package: stAnimal
+Version: 0.2.0
+Title: Animal models in Stan
+Description: Fit linear animal models in Stan for one or more traits.
 Authors@R: person("Diogo", "Melo", , "diogro@gmail.com", c("aut", "cre"))
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 Biarch: true
 Depends: 
-    R (>= 3.4.0)
+    R (>= 3.5.0)
 Imports: 
     Rcpp (>= 0.12.0),
     methods,
@@ -21,4 +21,4 @@ LinkingTo:
     StanHeaders (>= 2.18.0),
     rstan (>= 2.18.1)
 SystemRequirements: GNU make
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
