--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -13,7 +13,10 @@ Imports:
     Rcpp (>= 0.12.0),
     methods,
     rstan (>= 2.18.1),
-    rstantools (>= 2.0.0)
+    rstantools (>= 2.0.0),
+    R.matlab,
+    rhdf5,
+    JuliaCall
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
