--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     R.matlab,
     rhdf5,
     JuliaCall,
-    cmdstanr
+    cmdstanr,
+    posterior
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
